# redteam-agent-core

./: .env.example  .gitignore  CONTRACTS.md  README.md  pyproject.toml
src/redteam_agent_core/: __init__.py  agent.py  config.py
src/redteam_agent_core/chains/: __init__.py  exploit.py  remediation.py
src/redteam_agent_core/crawler/: __init__.py  firecrawl_client.py
src/redteam_agent_core/document/: __init__.py  processor.py
src/redteam_agent_core/events/: __init__.py  emitter.py
src/redteam_agent_core/executor/: __init__.py  client.py
src/redteam_agent_core/llm/: __init__.py  base.py  openrouter.py
src/redteam_agent_core/models/: __init__.py  app_context.py  events.py  results.py  vulnerability.py
src/redteam_agent_core/scanner/: __init__.py  security_use.py
tests/: test_agent.py  test_chains.py  test_document.py  test_events.py  test_executor.py  test_llm.py
